// Code generated by sgen.exe,2022-05-18 09:13:09. DO NOT EDIT.
// versions: v1.0.0
// 如果确实需要修改,请修改后改文件名,可以移除文件名中的.gen,以防下次生成覆盖

syntax = "proto3";

package service;
option go_package = ".;protosService";
import "google/protobuf/timestamp.proto";

//来源于数据表
message SceneIntelligenceResult {


    // @inject_tag: json:"id" gorm:"default:唯一主键;comment:唯一主键;size:19;"
    int64 id = 100;


    // @inject_tag: json:"runTime" gorm:"default:运行时间;comment:运行时间;"
    google.protobuf.Timestamp runTime = 101; 


    // @inject_tag: json:"intelligenceId" gorm:"default:智能场景编号;comment:智能场景编号;size:19;"
    int64 intelligenceId = 102;


    // @inject_tag: json:"runStatus" gorm:"default:运行状态 =1 执行中 = 2 执行成功 =3 执行失败;comment:运行状态 =1 执行中 = 2 执行成功 =3 执行失败;size:10;"
    int32 runStatus = 103;

}

message SceneIntelligenceResultFilter {


    // @inject_tag: json:"id" gorm:"default:唯一主键;comment:唯一主键;size:19;"
    int64 id = 100;


    // @inject_tag: json:"runTime" gorm:"default:运行时间;comment:运行时间;"
    google.protobuf.Timestamp runTime = 101; 


    // @inject_tag: json:"intelligenceId" gorm:"default:智能场景编号;comment:智能场景编号;size:19;"
    int64 intelligenceId = 102;


    // @inject_tag: json:"runStatus" gorm:"default:运行状态 =1 执行中 = 2 执行成功 =3 执行失败;comment:运行状态 =1 执行中 = 2 执行成功 =3 执行失败;size:10;"
    int32 runStatus = 103;

}

message SceneIntelligenceResultListRequest {
    SceneIntelligenceResult query = 101;
    int64 page = 102;
    int64 pageSize = 103;
    string orderKey = 104;
    string orderDesc = 105;
    string searchKey = 106;
}

message SceneIntelligenceResultResponse {
    int32 code = 101;
    string message = 102;
    int64 total = 103;
    repeated SceneIntelligenceResult data = 104;
}

message SceneIntelligenceResultUpdateFieldsRequest {
    repeated string fields = 101;
    SceneIntelligenceResult data = 102;
}


// 表模型主键，只能是整数或字符串，若生成错误，请检查数据库表主键是否正确。支持组合主键
message SceneIntelligenceResultPrimarykey {

    int64 id = 100;
}

message SceneIntelligenceResultBatchDeleteRequest {
    repeated SceneIntelligenceResultPrimarykey keys = 101;
}